feat: 복용내역 API 수정
