# docs/swagger.json
@@ -504,9 +504,13 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "target_date",
-                        "in": "query",
-                        "required": true
+                        "name": "targetDate",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "userId",
+                        "in": "query"
                     }
                 ],
                 "responses": {}
